[BE] 코스 필터링, 검색, 정렬 단위 테스트 작성